--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "near-api-js": "^0.44.2",
     "purescript": "^0.15.0",
-    "spago": "^0.20.9"
+    "spago": "^0.20.9",
+    "xhr2": "^0.2.1"
   }
 }
